Added felxible interpolation routine to Misc and used this to creat a lookup table to speed up queries to ageStructure.

--- a/trunk/increment/Makefile
+++ b/trunk/increment/Makefile
@@ -1,31 +1,31 @@
-all:	 as ic mi
+all:	 mi ic as
 
 
-mi:	testMisc misc
+mi:	testMisc misc.o
 
-testMisc:	testMisc.cc misc.h
+testMisc:	testMisc.cc misc.o
 	g++ -Wall testMisc.cc -O2 -otestMisc misc.o
 	strip testMisc
 
-misc:	misc.cc misc.h
+misc.o:	misc.cc misc.h
 	g++ -Wall misc.cc -c -O2
 
 
-as:	testAgeStruct #ageStruct
+as:	testAgeStruct ageStruct.o
 
-testAgeStruct:	testAgeStruct.cc ageStruct.o increment.o
-	g++ -Wall testAgeStruct.cc -O2 -otestAgeStruct ageStruct.o increment.o
+testAgeStruct:	testAgeStruct.cc ageStruct.o increment.o misc.o
+	g++ -Wall testAgeStruct.cc -O2 -otestAgeStruct ageStruct.o increment.o misc.o
 	strip testAgeStruct
 
-ageStruct:	ageStruct.cc ageStruct.h
+ageStruct.o:	ageStruct.cc ageStruct.h
 	g++ -Wall ageStruct.cc -c -O2
 
 
-ic:	testIncrement #increment
+ic:	testIncrement increment.o
 
 testIncrement:	testIncrement.cc increment.o
 	g++ -Wall testIncrement.cc -O2 -otestIncrement increment.o
 	strip testIncrement
 
-increment:	increment.cc increment.h
+increment.o:	increment.cc increment.h
 	g++ -Wall increment.cc -c -O2
